parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMENTARIO

Grammar

Rule 0     S' -> programa
Rule 1     programa -> lista_declaracoes
Rule 2     lista_declaracoes -> lista_declaracoes declaracao
Rule 3     lista_declaracoes -> declaracao
Rule 4     declaracao -> declaracao_variaveis
Rule 5     declaracao -> inicializacao_variaveis
Rule 6     declaracao -> declaracao_funcao
Rule 7     declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis
Rule 8     inicializacao_variaveis -> atribuicao
Rule 9     lista_variaveis -> lista_variaveis VIRGULA var
Rule 10    lista_variaveis -> var
Rule 11    var -> ID
Rule 12    var -> ID indice
Rule 13    indice -> indice ABRE_COLCHETE expressao FECHA_COLCHETE
Rule 14    indice -> ABRE_COLCHETE expressao FECHA_COLCHETE
Rule 15    tipo -> INTEIRO
Rule 16    tipo -> FLUTUANTE
Rule 17    declaracao_funcao -> tipo cabecalho
Rule 18    declaracao_funcao -> cabecalho
Rule 19    cabecalho -> ID ABRE_PARENTESE lista_parametros FECHA_PARENTESE corpo FIM
Rule 20    lista_parametros -> lista_parametros VIRGULA parametro
Rule 21    lista_parametros -> parametro
Rule 22    lista_parametros -> vazio
Rule 23    parametro -> tipo DOIS_PONTOS ID
Rule 24    parametro -> parametro ABRE_COLCHETE FECHA_COLCHETE
Rule 25    corpo -> corpo acao
Rule 26    corpo -> vazio
Rule 27    acao -> expressao
Rule 28    acao -> declaracao_variaveis
Rule 29    acao -> se
Rule 30    acao -> repita
Rule 31    acao -> leia
Rule 32    acao -> escreva
Rule 33    acao -> retorna
Rule 34    se -> SE expressao ENTAO corpo FIM
Rule 35    se -> SE expressao ENTAO corpo SENAO corpo FIM
Rule 36    repita -> REPITA corpo ATE expressao
Rule 37    atribuicao -> var ATRIBUICAO expressao
Rule 38    leia -> LEIA ABRE_PARENTESE var FECHA_PARENTESE
Rule 39    escreva -> ESCREVA ABRE_PARENTESE expressao FECHA_PARENTESE
Rule 40    retorna -> RETORNA ABRE_PARENTESE expressao FECHA_PARENTESE
Rule 41    expressao -> expressao_logica
Rule 42    expressao -> atribuicao
Rule 43    expressao_logica -> expressao_simples
Rule 44    expressao_logica -> expressao_logica operador_logico expressao_simples
Rule 45    expressao_simples -> expressao_aditiva
Rule 46    expressao_simples -> expressao_simples operador_relacional expressao_aditiva
Rule 47    expressao_aditiva -> expressao_multiplicativa
Rule 48    expressao_aditiva -> expressao_aditiva operador_soma expressao_multiplicativa
Rule 49    expressao_multiplicativa -> expressao_unaria
Rule 50    expressao_multiplicativa -> expressao_multiplicativa operador_multiplicacao expressao_unaria
Rule 51    expressao_unaria -> fator
Rule 52    expressao_unaria -> operador_soma fator
Rule 53    expressao_unaria -> operador_negacao fator
Rule 54    operador_relacional -> MENOR
Rule 55    operador_relacional -> MAIOR
Rule 56    operador_relacional -> IGUAL
Rule 57    operador_relacional -> DIFERENTE
Rule 58    operador_relacional -> MENOR_IGUAL
Rule 59    operador_relacional -> MAIOR_IGUAL
Rule 60    operador_soma -> MAIS
Rule 61    operador_soma -> MENOS
Rule 62    operador_logico -> E_LOGICO
Rule 63    operador_logico -> OU_LOGICO
Rule 64    operador_negacao -> NEGACAO
Rule 65    operador_multiplicacao -> MULTIPLICACAO
Rule 66    operador_multiplicacao -> DIVISAO
Rule 67    fator -> ABRE_PARENTESE expressao FECHA_PARENTESE
Rule 68    fator -> var
Rule 69    fator -> chamada_funcao
Rule 70    fator -> numero
Rule 71    numero -> NUM_INTEIRO
Rule 72    numero -> NUM_PONTO_FLUTUANTE
Rule 73    numero -> NUM_NOTACAO_CIENTIFICA
Rule 74    chamada_funcao -> ID ABRE_PARENTESE lista_argumentos FECHA_PARENTESE
Rule 75    lista_argumentos -> lista_argumentos VIRGULA expressao
Rule 76    lista_argumentos -> expressao
Rule 77    lista_argumentos -> vazio
Rule 78    vazio -> <empty>

Terminals, with rules where they appear

ABRE_COLCHETE        : 13 14 24
ABRE_PARENTESE       : 19 38 39 40 67 74
ATE                  : 36
ATRIBUICAO           : 37
COMENTARIO           : 
DIFERENTE            : 57
DIVISAO              : 66
DOIS_PONTOS          : 7 23
ENTAO                : 34 35
ESCREVA              : 39
E_LOGICO             : 62
FECHA_COLCHETE       : 13 14 24
FECHA_PARENTESE      : 19 38 39 40 67 74
FIM                  : 19 34 35
FLUTUANTE            : 16
ID                   : 11 12 19 23 74
IGUAL                : 56
INTEIRO              : 15
LEIA                 : 38
MAIOR                : 55
MAIOR_IGUAL          : 59
MAIS                 : 60
MENOR                : 54
MENOR_IGUAL          : 58
MENOS                : 61
MULTIPLICACAO        : 65
NEGACAO              : 64
NUM_INTEIRO          : 71
NUM_NOTACAO_CIENTIFICA : 73
NUM_PONTO_FLUTUANTE  : 72
OU_LOGICO            : 63
REPITA               : 36
RETORNA              : 40
SE                   : 34 35
SENAO                : 35
VIRGULA              : 9 20 75
error                : 

Nonterminals, with rules where they appear

acao                 : 25
atribuicao           : 8 42
cabecalho            : 17 18
chamada_funcao       : 69
corpo                : 19 25 34 35 35 36
declaracao           : 2 3
declaracao_funcao    : 6
declaracao_variaveis : 4 28
escreva              : 32
expressao            : 13 14 27 34 35 36 37 39 40 67 75 76
expressao_aditiva    : 45 46 48
expressao_logica     : 41 44
expressao_multiplicativa : 47 48 50
expressao_simples    : 43 44 46
expressao_unaria     : 49 50
fator                : 51 52 53
indice               : 12 13
inicializacao_variaveis : 5
leia                 : 31
lista_argumentos     : 74 75
lista_declaracoes    : 1 2
lista_parametros     : 19 20
lista_variaveis      : 7 9
numero               : 70
operador_logico      : 44
operador_multiplicacao : 50
operador_negacao     : 53
operador_relacional  : 46
operador_soma        : 48 52
parametro            : 20 21 24
programa             : 0
repita               : 30
retorna              : 33
se                   : 29
tipo                 : 7 17 23
var                  : 9 10 37 38 68
vazio                : 22 26 77

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . lista_declaracoes
    (2) lista_declaracoes -> . lista_declaracoes declaracao
    (3) lista_declaracoes -> . declaracao
    (4) declaracao -> . declaracao_variaveis
    (5) declaracao -> . inicializacao_variaveis
    (6) declaracao -> . declaracao_funcao
    (7) declaracao_variaveis -> . tipo DOIS_PONTOS lista_variaveis
    (8) inicializacao_variaveis -> . atribuicao
    (17) declaracao_funcao -> . tipo cabecalho
    (18) declaracao_funcao -> . cabecalho
    (15) tipo -> . INTEIRO
    (16) tipo -> . FLUTUANTE
    (37) atribuicao -> . var ATRIBUICAO expressao
    (19) cabecalho -> . ID ABRE_PARENTESE lista_parametros FECHA_PARENTESE corpo FIM
    (11) var -> . ID
    (12) var -> . ID indice

    INTEIRO         shift and go to state 10
    FLUTUANTE       shift and go to state 11
    ID              shift and go to state 13

    programa                       shift and go to state 1
    lista_declaracoes              shift and go to state 2
    declaracao                     shift and go to state 3
    declaracao_variaveis           shift and go to state 4
    inicializacao_variaveis        shift and go to state 5
    declaracao_funcao              shift and go to state 6
    tipo                           shift and go to state 7
    atribuicao                     shift and go to state 8
    cabecalho                      shift and go to state 9
    var                            shift and go to state 12

state 1

    (0) S' -> programa .



state 2

    (1) programa -> lista_declaracoes .
    (2) lista_declaracoes -> lista_declaracoes . declaracao
    (4) declaracao -> . declaracao_variaveis
    (5) declaracao -> . inicializacao_variaveis
    (6) declaracao -> . declaracao_funcao
    (7) declaracao_variaveis -> . tipo DOIS_PONTOS lista_variaveis
    (8) inicializacao_variaveis -> . atribuicao
    (17) declaracao_funcao -> . tipo cabecalho
    (18) declaracao_funcao -> . cabecalho
    (15) tipo -> . INTEIRO
    (16) tipo -> . FLUTUANTE
    (37) atribuicao -> . var ATRIBUICAO expressao
    (19) cabecalho -> . ID ABRE_PARENTESE lista_parametros FECHA_PARENTESE corpo FIM
    (11) var -> . ID
    (12) var -> . ID indice

    $end            reduce using rule 1 (programa -> lista_declaracoes .)
    INTEIRO         shift and go to state 10
    FLUTUANTE       shift and go to state 11
    ID              shift and go to state 13

    declaracao                     shift and go to state 14
    declaracao_variaveis           shift and go to state 4
    inicializacao_variaveis        shift and go to state 5
    declaracao_funcao              shift and go to state 6
    tipo                           shift and go to state 7
    atribuicao                     shift and go to state 8
    cabecalho                      shift and go to state 9
    var                            shift and go to state 12

state 3

    (3) lista_declaracoes -> declaracao .

    INTEIRO         reduce using rule 3 (lista_declaracoes -> declaracao .)
    FLUTUANTE       reduce using rule 3 (lista_declaracoes -> declaracao .)
    ID              reduce using rule 3 (lista_declaracoes -> declaracao .)
    $end            reduce using rule 3 (lista_declaracoes -> declaracao .)


state 4

    (4) declaracao -> declaracao_variaveis .

    INTEIRO         reduce using rule 4 (declaracao -> declaracao_variaveis .)
    FLUTUANTE       reduce using rule 4 (declaracao -> declaracao_variaveis .)
    ID              reduce using rule 4 (declaracao -> declaracao_variaveis .)
    $end            reduce using rule 4 (declaracao -> declaracao_variaveis .)


state 5

    (5) declaracao -> inicializacao_variaveis .

    INTEIRO         reduce using rule 5 (declaracao -> inicializacao_variaveis .)
    FLUTUANTE       reduce using rule 5 (declaracao -> inicializacao_variaveis .)
    ID              reduce using rule 5 (declaracao -> inicializacao_variaveis .)
    $end            reduce using rule 5 (declaracao -> inicializacao_variaveis .)


state 6

    (6) declaracao -> declaracao_funcao .

    INTEIRO         reduce using rule 6 (declaracao -> declaracao_funcao .)
    FLUTUANTE       reduce using rule 6 (declaracao -> declaracao_funcao .)
    ID              reduce using rule 6 (declaracao -> declaracao_funcao .)
    $end            reduce using rule 6 (declaracao -> declaracao_funcao .)


state 7

    (7) declaracao_variaveis -> tipo . DOIS_PONTOS lista_variaveis
    (17) declaracao_funcao -> tipo . cabecalho
    (19) cabecalho -> . ID ABRE_PARENTESE lista_parametros FECHA_PARENTESE corpo FIM

    DOIS_PONTOS     shift and go to state 15
    ID              shift and go to state 17

    cabecalho                      shift and go to state 16

state 8

    (8) inicializacao_variaveis -> atribuicao .

    INTEIRO         reduce using rule 8 (inicializacao_variaveis -> atribuicao .)
    FLUTUANTE       reduce using rule 8 (inicializacao_variaveis -> atribuicao .)
    ID              reduce using rule 8 (inicializacao_variaveis -> atribuicao .)
    $end            reduce using rule 8 (inicializacao_variaveis -> atribuicao .)


state 9

    (18) declaracao_funcao -> cabecalho .

    INTEIRO         reduce using rule 18 (declaracao_funcao -> cabecalho .)
    FLUTUANTE       reduce using rule 18 (declaracao_funcao -> cabecalho .)
    ID              reduce using rule 18 (declaracao_funcao -> cabecalho .)
    $end            reduce using rule 18 (declaracao_funcao -> cabecalho .)


state 10

    (15) tipo -> INTEIRO .

    DOIS_PONTOS     reduce using rule 15 (tipo -> INTEIRO .)
    ID              reduce using rule 15 (tipo -> INTEIRO .)


state 11

    (16) tipo -> FLUTUANTE .

    DOIS_PONTOS     reduce using rule 16 (tipo -> FLUTUANTE .)
    ID              reduce using rule 16 (tipo -> FLUTUANTE .)


state 12

    (37) atribuicao -> var . ATRIBUICAO expressao

    ATRIBUICAO      shift and go to state 18


state 13

    (19) cabecalho -> ID . ABRE_PARENTESE lista_parametros FECHA_PARENTESE corpo FIM
    (11) var -> ID .
    (12) var -> ID . indice
    (13) indice -> . indice ABRE_COLCHETE expressao FECHA_COLCHETE
    (14) indice -> . ABRE_COLCHETE expressao FECHA_COLCHETE

    ABRE_PARENTESE  shift and go to state 19
    ATRIBUICAO      reduce using rule 11 (var -> ID .)
    ABRE_COLCHETE   shift and go to state 21

    indice                         shift and go to state 20

state 14

    (2) lista_declaracoes -> lista_declaracoes declaracao .

    INTEIRO         reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)
    FLUTUANTE       reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)
    ID              reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)
    $end            reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)


state 15

    (7) declaracao_variaveis -> tipo DOIS_PONTOS . lista_variaveis
    (9) lista_variaveis -> . lista_variaveis VIRGULA var
    (10) lista_variaveis -> . var
    (11) var -> . ID
    (12) var -> . ID indice

    ID              shift and go to state 24

    lista_variaveis                shift and go to state 22
    var                            shift and go to state 23

state 16

    (17) declaracao_funcao -> tipo cabecalho .

    INTEIRO         reduce using rule 17 (declaracao_funcao -> tipo cabecalho .)
    FLUTUANTE       reduce using rule 17 (declaracao_funcao -> tipo cabecalho .)
    ID              reduce using rule 17 (declaracao_funcao -> tipo cabecalho .)
    $end            reduce using rule 17 (declaracao_funcao -> tipo cabecalho .)


state 17

    (19) cabecalho -> ID . ABRE_PARENTESE lista_parametros FECHA_PARENTESE corpo FIM

    ABRE_PARENTESE  shift and go to state 19


state 18

    (37) atribuicao -> var ATRIBUICAO . expressao
    (41) expressao -> . expressao_logica
    (42) expressao -> . atribuicao
    (43) expressao_logica -> . expressao_simples
    (44) expressao_logica -> . expressao_logica operador_logico expressao_simples
    (37) atribuicao -> . var ATRIBUICAO expressao
    (45) expressao_simples -> . expressao_aditiva
    (46) expressao_simples -> . expressao_simples operador_relacional expressao_aditiva
    (11) var -> . ID
    (12) var -> . ID indice
    (47) expressao_aditiva -> . expressao_multiplicativa
    (48) expressao_aditiva -> . expressao_aditiva operador_soma expressao_multiplicativa
    (49) expressao_multiplicativa -> . expressao_unaria
    (50) expressao_multiplicativa -> . expressao_multiplicativa operador_multiplicacao expressao_unaria
    (51) expressao_unaria -> . fator
    (52) expressao_unaria -> . operador_soma fator
    (53) expressao_unaria -> . operador_negacao fator
    (67) fator -> . ABRE_PARENTESE expressao FECHA_PARENTESE
    (68) fator -> . var
    (69) fator -> . chamada_funcao
    (70) fator -> . numero
    (60) operador_soma -> . MAIS
    (61) operador_soma -> . MENOS
    (64) operador_negacao -> . NEGACAO
    (74) chamada_funcao -> . ID ABRE_PARENTESE lista_argumentos FECHA_PARENTESE
    (71) numero -> . NUM_INTEIRO
    (72) numero -> . NUM_PONTO_FLUTUANTE
    (73) numero -> . NUM_NOTACAO_CIENTIFICA

    ID              shift and go to state 31
    ABRE_PARENTESE  shift and go to state 37
    MAIS            shift and go to state 40
    MENOS           shift and go to state 41
    NEGACAO         shift and go to state 42
    NUM_INTEIRO     shift and go to state 43
    NUM_PONTO_FLUTUANTE shift and go to state 44
    NUM_NOTACAO_CIENTIFICA shift and go to state 45

    var                            shift and go to state 25
    expressao                      shift and go to state 26
    expressao_logica               shift and go to state 27
    atribuicao                     shift and go to state 28
    expressao_simples              shift and go to state 29
    expressao_aditiva              shift and go to state 30
    expressao_multiplicativa       shift and go to state 32
    operador_soma                  shift and go to state 33
    expressao_unaria               shift and go to state 34
    fator                          shift and go to state 35
    operador_negacao               shift and go to state 36
    chamada_funcao                 shift and go to state 38
    numero                         shift and go to state 39

state 19

    (19) cabecalho -> ID ABRE_PARENTESE . lista_parametros FECHA_PARENTESE corpo FIM
    (20) lista_parametros -> . lista_parametros VIRGULA parametro
    (21) lista_parametros -> . parametro
    (22) lista_parametros -> . vazio
    (23) parametro -> . tipo DOIS_PONTOS ID
    (24) parametro -> . parametro ABRE_COLCHETE FECHA_COLCHETE
    (78) vazio -> .
    (15) tipo -> . INTEIRO
    (16) tipo -> . FLUTUANTE
